--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "contentful": "^7.14.3",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0"
   },
