--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "contentful": "^7.14.3",
     "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0"
   },
