--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lalvarez-portfolio",
+  "name": "alvarez-portfolio",
   "version": "1.0.0",
-  "description": "Portfolio of the coffee addicted developer named Luis Alvarez",
-  "author": "Luis Alvarez",
+  "description": "Portfolio of the coffee addicted developer named Ori Alvarez",
+  "author": "Ori Alvarez",
   "private": true,
   "scripts": {
     "dev": "nuxt",
