--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.11.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
